--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -81,30 +84,56 @@
             </section>
 
             <!--Section Restaurants-->
-            <section class="fond_gris">
-                <h2>Restaurants</h2>
+            <section class="fond_gris" id="section_restaurants">
+                <h2 id="titre_restaurants">Restaurants</h2>
                 
                 <!--Première figure-->
-                <figure>
-                    <p><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="images_figures"/></p>
+                <figure class="position-flex margin_bottom">
+                    <span class="etiquette">Nouveau</span>
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="images_figures"/>
 
-                    <p>Nouveau</p>
 
-                    <figcaption>
+                    <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
+                        <p class="texte_figure">Ménilmontant</p>
+                        <span><i class="far fa-heart coeur"></i></span>
                     </figcaption>
                 </figure>
 
                  <!--Deuxième figure-->
-                 <figure>
-                    <p><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La note enchantée"/></p>
+                 <figure class="position-flex margin_bottom">
+                    <span class="etiquette">Nouveau</span>
+                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="images_figures"/>
 
-                    <p>Nouveau</p>
 
-                    <figcaption>
+                    <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>La note enchantée</h3>
-                        <p>Charonne</p>
+                        <p class="texte_figure">Charonne</p>
+                        <span><i class="far fa-heart coeur"></i></span>
+                    </figcaption>
+                </figure>
+
+                 <!--Troisième figure-->
+                 <figure class="position-flex margin_bottom">
+                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="images_figures"/>
+
+
+                    <figcaption class="position-flex-start figcaption_restaurants">
+                        <h3>À la française</h3>
+                        <p class="texte_figure">Cité Rouge</p>
+                        <span><i class="far fa-heart coeur"></i></span>
+                    </figcaption>
+                </figure>
+
+                 <!--Quatrième figure-->
+                 <figure class="position-flex margin_bottom">
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="images_figures"/>
+
+
+                    <figcaption class="position-flex-start figcaption_restaurants">
+                        <h3>Le délice des sens</h3>
+                        <p class="texte_figure"> Folie-Méricourt</p>
+                        <span><i class="far fa-heart coeur"></i></span>
                     </figcaption>
                 </figure>
             </section>
