Menu à la française
Header ok
Main en cours de finition

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -137,6 +141,18 @@
                     </figcaption>
                 </figure>
             </section>
+
+            <footer>
+                <!--Logo ohmyfood-->
+                <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" class="logo_footer"/>
+               
+                <ul>
+                    <li class="padding_bottom"><i class="fas fa-utensils padding_right"></i> <a href="lien1">Proposer un restaurant</a></li>
+                    <li class="padding_bottom"><i class="fas fa-hands-helping padding_right"></i><a href="lien2">Devenir partenaire</a></li>
+                    <li class="padding_bottom"><a href="lien3">Mentions légales</a></li>
+                    <li class="padding_bottom"><a href="lien4">Contact</a></li>
+                </ul>
+            </footer>
         </main>
     </body>
 
