Html css Pages de menu ok

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </figure>
 
                  <!--Troisième figure-->
-                 <figure class="position-flex margin_bottom">
+                 <a href="Menu-Française.html"><figure class="position-flex margin_bottom">
                     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="images_figures"/>
 
 
@@ -127,7 +127,7 @@
                         <p class="texte_figure">Cité Rouge</p>
                         <span><i class="far fa-heart coeur"></i></span>
                     </figcaption>
-                </figure>
+                </figure></a>
 
                  <!--Quatrième figure-->
                  <figure class="position-flex margin_bottom">
