--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -40,14 +40,14 @@
         </header>
         <main>
 
-            <div id="image_menu_un">
+            <div id="image_menu_trois">
                 
             </div>
 
             <section id="le_menu">
 
            
-            <h1 class="titres_des_menus">À la française</h1>
+            <h1 class="titres_des_menus">La palette du goût</h1>
 
             <span><i class="far fa-heart coeur_menu"></i></span>
 
@@ -55,60 +55,60 @@
                 <h2 class="sous_titres_menus">Entrées</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
-                    <p class="texte_bulle_menu">Aux zests d'orange</p>
+                    <h3 class="titre_bulle_menu">Fricassée d'escargot</h3>
+                    <p class="texte_bulle_menu">Au piment d'espelette</p>
                     <p class="prix">25€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
-                    <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                    <h3 class="titre_bulle_menu">Foie gras de canard mi-cuit</h3>
+                    <p class="texte_bulle_menu">Et ses copeaux de truffe noire</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <h3 class="titre_bulle_menu">Oeuf au plat</h3>
+                    <p class="texte_bulle_menu">Assaisonné à la truffe sur lit de ciboulette</p>
                     <p class="prix">20€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
-                    <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                    <h3 class="titre_bulle_menu">Filet de boeuf au herbes</h3>
+                    <p class="texte_bulle_menu">Accompagné de sa ribambelle de légumes</p>
                     <p class="prix">40€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Magret de canard</h3>
-                    <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                    <h3 class="titre_bulle_menu">Parmentier de queue de boeuf</h3>
+                    <p class="texte_bulle_menu">À la truffe noire sur sa purée de panais</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                    <h3 class="titre_bulle_menu">Filet de Turbot</h3>
+                    <p class="texte_bulle_menu">Aux agrumes</p>
                     <p class="prix">44€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
-                    <p class="texte_bulle_menu">Et purée de noisettes</p>
+                    <h3 class="titre_bulle_menu">Paris-Brest</h3>
+                    <p class="texte_bulle_menu">Revisitée</p>
                     <p class="prix">18€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <h3 class="titre_bulle_menu">Macaron au chocolat d'exception</h3>
+                    <p class="texte_bulle_menu">Et glace à la vanille de Madagascar</p>
                     <p class="prix">22€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
-                    <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                    <h3 class="titre_bulle_menu">Mousse au chocolat</h3>
+                    <p class="texte_bulle_menu">Au piment d'espelette et à la truffe noire</p>
                     <p class="prix">23€</p>
                 </div>
 
