--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -40,14 +40,14 @@
         </header>
         <main>
 
-            <div id="image_menu_un">
+            <div id="image_menu_quatre">
                 
             </div>
 
             <section id="le_menu">
 
            
-            <h1 class="titres_des_menus">À la française</h1>
+            <h1 class="titres_des_menus">Le délice des sens</h1>
 
             <span><i class="far fa-heart coeur_menu"></i></span>
 
@@ -55,60 +55,60 @@
                 <h2 class="sous_titres_menus">Entrées</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
-                    <p class="texte_bulle_menu">Aux zests d'orange</p>
+                    <h3 class="titre_bulle_menu">Tartare de thon</h3>
+                    <p class="texte_bulle_menu">Assaisonné au yuzu</p>
                     <p class="prix">25€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
-                    <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                    <h3 class="titre_bulle_menu">Bouchée de homard croustillant</h3>
+                    <p class="texte_bulle_menu">Et sa farandole de petits légumes</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <h3 class="titre_bulle_menu">Velouté de cèpes</h3>
+                    <p class="texte_bulle_menu">Aux truffes</p>
                     <p class="prix">20€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
-                    <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                    <h3 class="titre_bulle_menu">Poulet rôti aux herbes de provence</h3>
+                    <p class="texte_bulle_menu">Et sa crème de truffe</p>
                     <p class="prix">40€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Magret de canard</h3>
-                    <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                    <h3 class="titre_bulle_menu">Langouste rôtie</h3>
+                    <p class="texte_bulle_menu">Et ses légumes de saison</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                    <h3 class="titre_bulle_menu">Côte de boeuf angus</h3>
+                    <p class="texte_bulle_menu">Et sa purée de panais</p>
                     <p class="prix">44€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
-                    <p class="texte_bulle_menu">Et purée de noisettes</p>
+                    <h3 class="titre_bulle_menu">Farandole de desserts</h3>
+                    <p class="texte_bulle_menu">Du chef</p>
                     <p class="prix">18€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
+                    <h3 class="titre_bulle_menu">Crème brulée</h3>
                     <p class="texte_bulle_menu">Revisitée</p>
                     <p class="prix">22€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
-                    <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                    <h3 class="titre_bulle_menu">Tiramisu</h3>
+                    <p class="texte_bulle_menu">À la noisette</p>
                     <p class="prix">23€</p>
                 </div>
 
