--- a/note_enchante.html
+++ b/note_enchante.html
@@ -40,14 +40,14 @@
         </header>
         <main>
 
-            <div id="image_menu_un">
+            <div id="image_menu_deux">
                 
             </div>
 
             <section id="le_menu">
 
            
-            <h1 class="titres_des_menus">À la française</h1>
+            <h1 class="titres_des_menus">La note enchantée</h1>
 
             <span><i class="far fa-heart coeur_menu"></i></span>
 
@@ -55,60 +55,60 @@
                 <h2 class="sous_titres_menus">Entrées</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
-                    <p class="texte_bulle_menu">Aux zests d'orange</p>
+                    <h3 class="titre_bulle_menu">Raviole de foie gras</h3>
+                    <p class="texte_bulle_menu">Accompagnée de leur crème à la truffe</p>
                     <p class="prix">25€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
-                    <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                    <h3 class="titre_bulle_menu">Caviar osciètre</h3>
+                    <p class="texte_bulle_menu">Sur blini à la farine de blé noir</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <h3 class="titre_bulle_menu">Homard et espuma de pommes de terres</h3>
+                    <p class="texte_bulle_menu">Mariné aux zests d'orange</p>
                     <p class="prix">20€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
-                    <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                    <h3 class="titre_bulle_menu">Noix de coquilles Saint-Jacques</h3>
+                    <p class="texte_bulle_menu">Sur lit de purée de céleri-rave</p>
                     <p class="prix">40€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Magret de canard</h3>
-                    <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                    <h3 class="titre_bulle_menu">Langoustine poêlée</h3>
+                    <p class="texte_bulle_menu">Purée de patate douce</p>
                     <p class="prix">35€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                    <h3 class="titre_bulle_menu">Mijoté de queue de boeuf</h3>
+                    <p class="texte_bulle_menu">Et riz sauvage aux zests de citron</p>
                     <p class="prix">44€</p>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
-                    <p class="texte_bulle_menu">Et purée de noisettes</p>
+                    <h3 class="titre_bulle_menu">Macaron noisette et chocolat</h3>
+                    <p class="texte_bulle_menu">Glace au caramel brun et sel de Guérande</p>
                     <p class="prix">18€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <h3 class="titre_bulle_menu">Baba au rhum revisité</h3>
+                    <p class="texte_bulle_menu">Avec son coulis de citron</p>
                     <p class="prix">22€</p>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
-                    <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                    <h3 class="titre_bulle_menu">Tarte de citron meringuée</h3>
+                    <p class="texte_bulle_menu">Destructurée</p>
                     <p class="prix">23€</p>
                 </div>
 
