--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h2 id="titre_restaurants">Restaurants</h2>
                 
                 <!--Première figure-->
-                <figure class="position-flex margin_bottom">
+                <a href="la_palette_du_gout.html"><figure class="position-flex margin_bottom">
                     <span class="etiquette">Nouveau</span>
                     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="images_figures"/>
 
@@ -100,12 +100,15 @@
                     <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>La palette du goût</h3>
                         <p class="texte_figure">Ménilmontant</p>
-                        <span><i class="far fa-heart coeur"></i></span>
+                       <div class="coeur_box">
+                           <i class="far fa-heart coeur"></i>
+                           <i class="far fa-heart coeur_plein"></i>
+                       </div>
                     </figcaption>
-                </figure>
+                </figure></a>
 
                  <!--Deuxième figure-->
-                 <figure class="position-flex margin_bottom">
+                 <a href="note_enchante.html"><figure class="position-flex margin_bottom">
                     <span class="etiquette">Nouveau</span>
                     <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="images_figures"/>
 
@@ -113,9 +116,12 @@
                     <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>La note enchantée</h3>
                         <p class="texte_figure">Charonne</p>
-                        <span><i class="far fa-heart coeur"></i></span>
+                        <div class="coeur_box">
+                            <i class="far fa-heart coeur"></i>
+                            <i class="far fa-heart coeur_plein"></i>
+                        </div>
                     </figcaption>
-                </figure>
+                </figure></a>
 
                  <!--Troisième figure-->
                  <a href="Menu-Française.html"><figure class="position-flex margin_bottom">
@@ -125,23 +131,30 @@
                     <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>À la française</h3>
                         <p class="texte_figure">Cité Rouge</p>
-                        <span><i class="far fa-heart coeur"></i></span>
+                        <div class="coeur_box">
+                            <i class="far fa-heart coeur"></i>
+                            <i class="far fa-heart coeur_plein"></i>
+                        </div>
                     </figcaption>
                 </figure></a>
 
                  <!--Quatrième figure-->
-                 <figure class="position-flex margin_bottom">
+                <a href="delice_des_sens.html"><figure class="position-flex margin_bottom">
                     <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="images_figures"/>
 
 
                     <figcaption class="position-flex-start figcaption_restaurants">
                         <h3>Le délice des sens</h3>
                         <p class="texte_figure"> Folie-Méricourt</p>
-                        <span><i class="far fa-heart coeur"></i></span>
+                        <div class="coeur_box">
+                            <i class="far fa-heart coeur"></i>
+                            <i class="far fa-heart coeur_plein"></i>
+                        </div>
                     </figcaption>
-                </figure>
-            </section>
+                </figure></a>
 
+            </section>
+     
             <footer>
                 <!--Logo ohmyfood-->
                 <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" class="logo_footer"/>
@@ -150,7 +163,7 @@
                     <li class="padding_bottom"><i class="fas fa-utensils padding_right"></i> <a href="lien1">Proposer un restaurant</a></li>
                     <li class="padding_bottom"><i class="fas fa-hands-helping padding_right"></i><a href="lien2">Devenir partenaire</a></li>
                     <li class="padding_bottom"><a href="lien3">Mentions légales</a></li>
-                    <li class="padding_bottom"><a href="lien4">Contact</a></li>
+                    <li class="padding_bottom"><a href="mailto:info@ohmyfood.com">Contact</a></li>
                 </ul>
             </footer>
         </main>
