--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
                     <li class="padding_bottom"><a href="mailto:info@ohmyfood.com">Contact</a></li>
                 </ul>
             </footer>
+
+            <div class="box_spinner">
+                <div class=" spinner_1"></div>
+                <div class=" spinner_2"></div>
+            </div>
         </main>
     </body>
 
