--- a/Menu-Française.html
+++ b/Menu-Française.html
@@ -54,67 +54,72 @@
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
-                    <p class="texte_bulle_menu">Aux zests d'orange</p>
-                    <p class="prix">25€</p>
-                </div>
+                <article class="apparition">
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
+                        <p class="texte_bulle_menu">Aux zests d'orange</p>
+                        <p class="prix">25€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
-                    <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
-                    <p class="prix">35€</p>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
+                        <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                        <p class="prix">35€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
-                    <p class="prix">20€</p>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
+                        <p class="texte_bulle_menu">Revisitée</p>
+                        <p class="prix">20€</p>
+                    </div>
+                 </article>
 
-                <h2 class="sous_titres_menus">Plats</h2>
+                    <h2 class="sous_titres_menus">Plats</h2>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
-                    <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
-                    <p class="prix">40€</p>
-                </div>
+                <article class="apparition_2">
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
+                        <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                        <p class="prix">40€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Magret de canard</h3>
-                    <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
-                    <p class="prix">35€</p>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Magret de canard</h3>
+                        <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                        <p class="prix">35€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
-                    <p class="prix">44€</p>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
+                        <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                        <p class="prix">44€</p>
+                    </div>
+                </article>
 
-                <h2 class="sous_titres_menus">Déserts</h2>
+                    <h2 class="sous_titres_menus">Déserts</h2>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
-                    <p class="texte_bulle_menu">Et purée de noisettes</p>
-                    <p class="prix">18€</p>
-                </div>
+                <article class="apparition_3">
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
+                        <p class="texte_bulle_menu">Et purée de noisettes</p>
+                        <p class="prix">18€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
-                    <p class="prix">22€</p>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
+                        <p class="texte_bulle_menu">Revisitée</p>
+                        <p class="prix">22€</p>
+                    </div>
 
-                <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
-                    <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
-                    <p class="prix">23€</p>
-                </div>
-
-                <div class="bouton_menus">
-                <bouton class="boutton position-flex">Commander</bouton>
-                </div>
+                    <div class="bulles_menu">
+                        <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
+                        <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                        <p class="prix">23€</p>
+                    </div>
+                </article>
+                    <div class="bouton_menus">
+                    <bouton class="boutton position-flex">Commander</bouton>
+                    </div>
             </section>
         </section>
 
