--- a/Menu-Française.html
+++ b/Menu-Française.html
@@ -49,7 +49,10 @@
            
             <h1 class="titres_des_menus">À la française</h1>
 
-            <span><i class="far fa-heart coeur_menu"></i></span>
+            <div class="coeur_box_menu">
+                <i class="far fa-heart coeur_menu"></i>
+                <i class="far fa-heart coeur_plein_menu"></i>
+            </div>
 
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
@@ -59,18 +62,21 @@
                         <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
                         <p class="texte_bulle_menu">Aux zests d'orange</p>
                         <p class="prix">25€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
                         <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
                         <p class="prix">35€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
                         <p class="texte_bulle_menu">Revisitée</p>
                         <p class="prix">20€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                  </article>
 
@@ -81,18 +87,21 @@
                         <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
                         <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
                         <p class="prix">40€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Magret de canard</h3>
                         <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
                         <p class="prix">35€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
                         <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
                         <p class="prix">44€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                 </article>
 
@@ -103,18 +112,21 @@
                         <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
                         <p class="texte_bulle_menu">Et purée de noisettes</p>
                         <p class="prix">18€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
                         <p class="texte_bulle_menu">Revisitée</p>
                         <p class="prix">22€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
                         <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
                         <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
                         <p class="prix">23€</p>
+                        <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                 </article>
                     <div class="bouton_menus">
