--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -49,7 +49,10 @@
            
             <h1 class="titres_des_menus">Le délice des sens</h1>
 
-            <span><i class="far fa-heart coeur_menu"></i></span>
+            <div class="coeur_box_menu">
+                <i class="far fa-heart coeur_menu"></i>
+                <i class="far fa-heart coeur_plein_menu"></i>
+            </div>
 
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
@@ -58,18 +61,21 @@
                     <h3 class="titre_bulle_menu">Tartare de thon</h3>
                     <p class="texte_bulle_menu">Assaisonné au yuzu</p>
                     <p class="prix">25€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Bouchée de homard croustillant</h3>
                     <p class="texte_bulle_menu">Et sa farandole de petits légumes</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Velouté de cèpes</h3>
                     <p class="texte_bulle_menu">Aux truffes</p>
                     <p class="prix">20€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
@@ -78,18 +84,21 @@
                     <h3 class="titre_bulle_menu">Poulet rôti aux herbes de provence</h3>
                     <p class="texte_bulle_menu">Et sa crème de truffe</p>
                     <p class="prix">40€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Langouste rôtie</h3>
                     <p class="texte_bulle_menu">Et ses légumes de saison</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Côte de boeuf angus</h3>
                     <p class="texte_bulle_menu">Et sa purée de panais</p>
                     <p class="prix">44€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
@@ -98,18 +107,21 @@
                     <h3 class="titre_bulle_menu">Farandole de desserts</h3>
                     <p class="texte_bulle_menu">Du chef</p>
                     <p class="prix">18€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Crème brulée</h3>
                     <p class="texte_bulle_menu">Revisitée</p>
                     <p class="prix">22€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Tiramisu</h3>
                     <p class="texte_bulle_menu">À la noisette</p>
                     <p class="prix">23€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bouton_menus">
