--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -49,7 +49,10 @@
            
             <h1 class="titres_des_menus">La palette du goût</h1>
 
-            <span><i class="far fa-heart coeur_menu"></i></span>
+            <div class="coeur_box_menu">
+                <i class="far fa-heart coeur_menu"></i>
+                <i class="far fa-heart coeur_plein_menu"></i>
+            </div>
 
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
@@ -58,18 +61,21 @@
                     <h3 class="titre_bulle_menu">Fricassée d'escargot</h3>
                     <p class="texte_bulle_menu">Au piment d'espelette</p>
                     <p class="prix">25€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Foie gras de canard mi-cuit</h3>
                     <p class="texte_bulle_menu">Et ses copeaux de truffe noire</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Oeuf au plat</h3>
                     <p class="texte_bulle_menu">Assaisonné à la truffe sur lit de ciboulette</p>
                     <p class="prix">20€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
@@ -78,18 +84,21 @@
                     <h3 class="titre_bulle_menu">Filet de boeuf au herbes</h3>
                     <p class="texte_bulle_menu">Accompagné de sa ribambelle de légumes</p>
                     <p class="prix">40€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Parmentier de queue de boeuf</h3>
                     <p class="texte_bulle_menu">À la truffe noire sur sa purée de panais</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Filet de Turbot</h3>
                     <p class="texte_bulle_menu">Aux agrumes</p>
                     <p class="prix">44€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
@@ -98,18 +107,21 @@
                     <h3 class="titre_bulle_menu">Paris-Brest</h3>
                     <p class="texte_bulle_menu">Revisitée</p>
                     <p class="prix">18€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Macaron au chocolat d'exception</h3>
                     <p class="texte_bulle_menu">Et glace à la vanille de Madagascar</p>
                     <p class="prix">22€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Mousse au chocolat</h3>
                     <p class="texte_bulle_menu">Au piment d'espelette et à la truffe noire</p>
                     <p class="prix">23€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bouton_menus">
