--- a/note_enchante.html
+++ b/note_enchante.html
@@ -49,7 +49,10 @@
            
             <h1 class="titres_des_menus">La note enchantée</h1>
 
-            <span><i class="far fa-heart coeur_menu"></i></span>
+            <div class="coeur_box_menu">
+                <i class="far fa-heart coeur_menu"></i>
+                <i class="far fa-heart coeur_plein_menu"></i>
+            </div>
 
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
@@ -58,18 +61,21 @@
                     <h3 class="titre_bulle_menu">Raviole de foie gras</h3>
                     <p class="texte_bulle_menu">Accompagnée de leur crème à la truffe</p>
                     <p class="prix">25€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Caviar osciètre</h3>
                     <p class="texte_bulle_menu">Sur blini à la farine de blé noir</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Homard et espuma de pommes de terres</h3>
                     <p class="texte_bulle_menu">Mariné aux zests d'orange</p>
                     <p class="prix">20€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Plats</h2>
@@ -78,18 +84,21 @@
                     <h3 class="titre_bulle_menu">Noix de coquilles Saint-Jacques</h3>
                     <p class="texte_bulle_menu">Sur lit de purée de céleri-rave</p>
                     <p class="prix">40€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Langoustine poêlée</h3>
                     <p class="texte_bulle_menu">Purée de patate douce</p>
                     <p class="prix">35€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Mijoté de queue de boeuf</h3>
                     <p class="texte_bulle_menu">Et riz sauvage aux zests de citron</p>
                     <p class="prix">44€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
@@ -98,18 +107,21 @@
                     <h3 class="titre_bulle_menu">Macaron noisette et chocolat</h3>
                     <p class="texte_bulle_menu">Glace au caramel brun et sel de Guérande</p>
                     <p class="prix">18€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Baba au rhum revisité</h3>
                     <p class="texte_bulle_menu">Avec son coulis de citron</p>
                     <p class="prix">22€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Tarte de citron meringuée</h3>
                     <p class="texte_bulle_menu">Destructurée</p>
                     <p class="prix">23€</p>
+                    <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bouton_menus">
