--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <!--Section pour le descriptif de fonctionnement-->
             <section id="section_fonctionnement">
                 <h2>Fonctionnement</h2>
+
+            <div id="contenaire_bulles">
                 <!--Première figure-->
-                    <div>
+                <div>
                     <figure class="bulle">
                         <p class="bulle_chiffre position-flex">1</p>
                         <i class="fas fa-mobile-alt icons"></i>
@@ -85,13 +87,16 @@
                         </figcaption>
                     </figure>
                 </div>
+            </div>
             </section>
 
             <!--Section Restaurants-->
             <section class="fond_gris" id="section_restaurants">
                 <h2 id="titre_restaurants">Restaurants</h2>
                 
+            <div class="contenaire_article">
                 <!--Première figure-->
+                <article class="restaurants_articles">
                 <a href="la_palette_du_gout.html"><figure class="position-flex margin_bottom">
                     <span class="etiquette">Nouveau</span>
                     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="images_figures"/>
@@ -106,53 +111,57 @@
                        </div>
                     </figcaption>
                 </figure></a>
-
+                </article>
                  <!--Deuxième figure-->
-                 <a href="note_enchante.html"><figure class="position-flex margin_bottom">
-                    <span class="etiquette">Nouveau</span>
-                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="images_figures"/>
+                 <article class="restaurants_articles">
+                    <a href="note_enchante.html"><figure class="position-flex margin_bottom">
+                        <span class="etiquette">Nouveau</span>
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="images_figures"/>
 
 
-                    <figcaption class="position-flex-start figcaption_restaurants">
-                        <h3>La note enchantée</h3>
-                        <p class="texte_figure">Charonne</p>
-                        <div class="coeur_box">
-                            <i class="far fa-heart coeur"></i>
-                            <i class="far fa-heart coeur_plein"></i>
-                        </div>
-                    </figcaption>
-                </figure></a>
-
+                        <figcaption class="position-flex-start figcaption_restaurants">
+                            <h3>La note enchantée</h3>
+                            <p class="texte_figure">Charonne</p>
+                            <div class="coeur_box">
+                                <i class="far fa-heart coeur"></i>
+                                <i class="far fa-heart coeur_plein"></i>
+                            </div>
+                        </figcaption>
+                    </figure></a>
+                </article>
                  <!--Troisième figure-->
-                 <a href="Menu-Française.html"><figure class="position-flex margin_bottom">
-                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="images_figures"/>
+                <article class="restaurants_articles">
+                    <a href="Menu-Française.html"><figure class="position-flex margin_bottom">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="images_figures"/>
 
 
-                    <figcaption class="position-flex-start figcaption_restaurants">
-                        <h3>À la française</h3>
-                        <p class="texte_figure">Cité Rouge</p>
-                        <div class="coeur_box">
-                            <i class="far fa-heart coeur"></i>
-                            <i class="far fa-heart coeur_plein"></i>
-                        </div>
-                    </figcaption>
-                </figure></a>
-
+                        <figcaption class="position-flex-start figcaption_restaurants">
+                            <h3>À la française</h3>
+                            <p class="texte_figure">Cité Rouge</p>
+                            <div class="coeur_box">
+                                <i class="far fa-heart coeur"></i>
+                                <i class="far fa-heart coeur_plein"></i>
+                            </div>
+                        </figcaption>
+                    </figure></a>
+                </article>
                  <!--Quatrième figure-->
-                <a href="delice_des_sens.html"><figure class="position-flex margin_bottom">
-                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="images_figures"/>
+                 <article class="restaurants_articles">
+                    <a href="delice_des_sens.html"><figure class="position-flex margin_bottom">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="images_figures"/>
 
 
-                    <figcaption class="position-flex-start figcaption_restaurants">
-                        <h3>Le délice des sens</h3>
-                        <p class="texte_figure"> Folie-Méricourt</p>
-                        <div class="coeur_box">
-                            <i class="far fa-heart coeur"></i>
-                            <i class="far fa-heart coeur_plein"></i>
-                        </div>
-                    </figcaption>
-                </figure></a>
-
+                        <figcaption class="position-flex-start figcaption_restaurants">
+                            <h3>Le délice des sens</h3>
+                            <p class="texte_figure"> Folie-Méricourt</p>
+                            <div class="coeur_box">
+                                <i class="far fa-heart coeur"></i>
+                                <i class="far fa-heart coeur_plein"></i>
+                            </div>
+                        </figcaption>
+                    </figure></a>
+                </article>
+            </div>
             </section>
      
             <footer>
