Media Queries Menus x4

--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -38,7 +38,7 @@
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image_fond"/>
             -->
         </header>
-        <main>
+        <main class="les_menus">
 
             <div id="image_menu_quatre">
                 
