--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p class="bulle_chiffre position-flex">1</p>
                         <i class="fas fa-mobile-alt icons"></i>
 
-                        <figcaption id="figcaption">
+                        <figcaption>
                             Choisissez un restaurant
                         </figcaption>
                     </figure>
@@ -88,6 +88,7 @@
                     </figure>
                 </div>
             </div>
+
             </section>
 
             <!--Section Restaurants-->
