--- a/note_enchante.html
+++ b/note_enchante.html
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Homard et espuma de pommes de terres</h3>
+                    <h3 class="titre_bulle_menu">Homard et espuma de potiron</h3>
                     <p class="texte_bulle_menu">Mariné aux zests d'orange</p>
                     <p class="prix">20€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
