--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="position-flex" id="lieu">
                 <i class="fas fa-map-marker-alt icons"></i>
 
-                <form method="post" action="">
+                <form method="post" action="post">
                     <!--Input permettant de rechercher la ville-->
                     <input type="search" value="Paris, Belleville" name="ville" id="ville"/>
                 </form>
