--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -57,6 +57,7 @@
            
                 <h2 class="sous_titres_menus">Entrées</h2>
 
+            <article class="apparition">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Fricassée d'escargot</h3>
                     <p class="texte_bulle_menu">Au piment d'espelette</p>
@@ -77,9 +78,11 @@
                     <p class="prix">20€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
+            <article class="apparition_2">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Filet de boeuf au herbes</h3>
                     <p class="texte_bulle_menu">Accompagné de sa ribambelle de légumes</p>
@@ -100,9 +103,11 @@
                     <p class="prix">44€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
+            <article class="apparition_3">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Paris-Brest</h3>
                     <p class="texte_bulle_menu">Revisitée</p>
@@ -123,6 +128,7 @@
                     <p class="prix">23€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <div class="bouton_menus">
                 <bouton class="boutton position-flex">Commander</bouton>
