--- a/note_enchante.html
+++ b/note_enchante.html
@@ -57,6 +57,7 @@
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
 
+            <article class="apparition">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Raviole de foie gras</h3>
                     <p class="texte_bulle_menu">Accompagnée de leur crème à la truffe</p>
@@ -77,9 +78,11 @@
                     <p class="prix">20€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
+            <article class="apparition_2">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Noix de coquilles Saint-Jacques</h3>
                     <p class="texte_bulle_menu">Sur lit de purée de céleri-rave</p>
@@ -100,9 +103,11 @@
                     <p class="prix">44€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
+            <article class="apparition_3">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Macaron noisette et chocolat</h3>
                     <p class="texte_bulle_menu">Glace au caramel brun et sel de Guérande</p>
@@ -123,7 +128,8 @@
                     <p class="prix">23€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
-
+            </article>
+            
                 <div class="bouton_menus">
                 <bouton class="boutton position-flex">Commander</bouton>
                 </div>
