--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -57,6 +57,7 @@
             <section>
                 <h2 class="sous_titres_menus">Entrées</h2>
 
+            <article class="apparition">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Tartare de thon</h3>
                     <p class="texte_bulle_menu">Assaisonné au yuzu</p>
@@ -77,9 +78,11 @@
                     <p class="prix">20€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Plats</h2>
 
+            <article class="apparition_2">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Poulet rôti aux herbes de provence</h3>
                     <p class="texte_bulle_menu">Et sa crème de truffe</p>
@@ -100,9 +103,11 @@
                     <p class="prix">44€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
+            </article>
 
                 <h2 class="sous_titres_menus">Déserts</h2>
 
+            <article class="apparition_3">
                 <div class="bulles_menu">
                     <h3 class="titre_bulle_menu">Farandole de desserts</h3>
                     <p class="texte_bulle_menu">Du chef</p>
@@ -123,7 +128,8 @@
                     <p class="prix">23€</p>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
-
+            </article>
+            
                 <div class="bouton_menus">
                 <bouton class="boutton position-flex">Commander</bouton>
                 </div>
