--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Lier la page css-->
         <link rel="stylesheet" href="public/css/style.css"/>
         <!--Déclaration du viewport-->
-        <meta name="viewport" content="width=device-width"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <!-- Pour les icons-->
          <script src="https://kit.fontawesome.com/5df1daaa8f.js" crossorigin="anonymous"></script>
          <!--Polices-->
