Image de fond menus
Problème résolu

--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -40,8 +40,8 @@
         </header>
         <main class="les_menus">
 
-            <div id="image_menu_quatre">
-                
+            <div class="image_menu">
+                <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="delice_des_sens" class="image_fond_menus">
             </div>
 
             <section id="le_menu">
