--- a/Menu-Française.html
+++ b/Menu-Française.html
@@ -40,8 +40,8 @@
         </header>
         <main class="les_menus">
 
-            <div id="image_menu_un">
-                
+            <div class="image_menu">
+                <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu à la française" class="image_fond_menus">
             </div>
 
             <section id="le_menu">
