--- a/note_enchante.html
+++ b/note_enchante.html
@@ -40,8 +40,8 @@
         </header>
         <main class="les_menus">
 
-            <div id="image_menu_deux">
-                
+            <div class="image_menu">
+                <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note_enchantée" class="image_fond_menus">
             </div>
 
             <section id="le_menu">
