--- a/Menu-Française.html
+++ b/Menu-Française.html
@@ -41,7 +41,7 @@
         <main class="les_menus">
 
             <div class="image_menu">
-                <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu à la française" class="image_fond_menus">
+                <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu à la française" class="image_fond_menus">
             </div>
 
             <section id="le_menu">
