--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -41,7 +41,7 @@
         <main class="les_menus">
 
                 <div class="image_menu">
-                    <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la_palette_du_gout" class="image_fond_menus">
+                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la_palette_du_gout" class="image_fond_menus">
                 </div>
 
             <section id="le_menu">
