--- a/note_enchante.html
+++ b/note_enchante.html
@@ -41,7 +41,7 @@
         <main class="les_menus">
 
             <div class="image_menu">
-                <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note_enchantée" class="image_fond_menus">
+                <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="note_enchantée" class="image_fond_menus">
             </div>
 
             <section id="le_menu">
