--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -33,7 +33,7 @@
             <a href="index.html"><i class="fas fa-arrow-left icons_menu"></i></a>
 
             <!--Logo ohmyfood-->
-            <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" id="logo"/>
+            <a href="index.html"><img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" id="logo"/></a>
             <!--
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image_fond"/>
             -->
