--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -29,11 +29,11 @@
     </head>
 
     <body>
-        <header class="position-flex">
+        <header class="position-flex header">
             <a href="index.html"><i class="fas fa-arrow-left icons_menu"></i></a>
 
             <!--Logo ohmyfood-->
-            <a href="index.html"><img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" id="logo"/></a>
+            <a href="index.html"><img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" id="logo_menus"/></a>
             <!--
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image_fond"/>
             -->
@@ -44,6 +44,7 @@
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la_palette_du_gout" class="image_fond_menus">
                 </div>
 
+        <div class="box_menu">
             <section id="le_menu">
 
            
@@ -131,12 +132,13 @@
             </article>
 
                 <div class="bouton_menus">
-                <bouton class="boutton position-flex">Commander</bouton>
+                <bouton class="boutton position-flex btn_menu">Commander</bouton>
                 </div>
             </section>
+        </div>
         </section>
 
-        <footer>
+        <footer class="footer_menus">
              <!--Logo ohmyfood-->
              <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" class="logo_footer"/>
                
