--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -131,12 +131,12 @@
             </article>
             
                 <div class="bouton_menus">
-                <bouton class="boutton position-flex">Commander</bouton>
+                <bouton class="boutton position-flex btn_menu">Commander</bouton>
                 </div>
             </section>
         </section>
 
-        <footer>
+        <footer class="footer_menus">
              <!--Logo ohmyfood-->
              <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood@2x" class="logo_footer"/>
                
